# bpygfn

./: .env  .gitignore  .gitmodules  EnergyFunctions.ipynb  LICENSE  README.md  Untitled.ipynb  blender_gfn_experiment.py  blender_setup_utils.py  cgfn_model.py  color_ramp_notebook.ipynb  color_ramp_notebook.ipynb.old  docker-compose.yml  dockerfile  hypergrid_trajectory_balance_experiment.py  index.html  pyproject.toml  tb_model_weights.pth  template_terrain.blend  test_bpy.py  trajectory_balance_gridworld.ipynb
.ipynb_checkpoints/: blender_gfn_experiment-checkpoint.py
action_utils/: action_regestry_util.py  factorized_state.py
bpygfn/: __init__.py  base.py  blender_functions.py  gfn_gfnbaseline.py  quat.py
csv/: color_palette.csv
docs/: index.html
exp-scripts/: __init__.py  gfn_basline_experiment.py  gfn_geometry_node.py  gfn_poc.ipynb
exp-scripts/mlruns/0/: meta.yaml
exp-scripts/mlruns/0/235943ff6be247ec82ed18a70d6e65f3/tags/: mlflow.runName
experiments/: average_height_multi_mode_experiment.ipynb  cgfn.ipynb  create_stepw_env_data.ipynb  explore_step_w_env.ipynb  stepw_gfn.py  train_cgfn.py  trajectory_balance_gridworld.ipynb
gfn_environments/: blender_gfn_experiment.py  blender_utils.py  generate_single_color_ramp_script.py  heightmap_reward_utils.py  hypergrid_trajectory_balance.py  replay_buffer.py  single_color_ramp.blend.bak  single_color_ramp.py  single_color_ramp.py.bak
gfn_environments/_single_color_ramp/: action_state.py  gen_blender_file.py  replay_buffer.py
json/: blender_config.json
json_files/: blender_scenes.json
mlruns/0/: meta.yaml
models/: cgfn_model.py
notebooks/: gfn_poc.ipynb
notebooks/mlruns/0/235943ff6be247ec82ed18a70d6e65f3/: meta.yaml
notebooks/mlruns/0/235943ff6be247ec82ed18a70d6e65f3/metrics/: foo
notebooks/mlruns/0/235943ff6be247ec82ed18a70d6e65f3/tags/: mlflow.source.name
scripts/: train_gfn.py  train_simple.ipynb  verify_blender.py
scripts/utils/: paths.py
src/: pyproject.toml
src/gfnbpy/: __init__.py
src/gfnbpy/gfn/: __init__.py
src/tests/: test_gfnbpy.py
tests/: demo_varience_range.ipynb  test_blender.py  test_bpygfn.py  test_gfnbpy.py  test_simple_color_ramp.py  validate_trainer.py  viz_step_w.ipynb
tests/sandboxs/: demo_varience_range.ipynb  step_w_testing.ipynb  test_action_utils.py  test_bpygfn.py  trajectory_balence_sandbox.py  viz_step_w.ipynb  viz_trajecories.ipynb
