[tool.poetry]
name = "bpygfn"
version = "0.1.0"
description = ""
authors = ["JayCeLeonardUO <jayce@uoregon.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
bpy = "^4.3.0"
numpy = "<2.0"
pytest = "^8.3.3"
pydantic = "^2.10.2"
torch = "^2.5.1"
ipykernel = "^6.29.5"
tqdm = "^4.67.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
pyro-ppl = "^1.9.1"
mlflow = "^2.18.0"
duckdb = "^1.1.3"
ruff = "^0.9.2"
torchgfn = {path = "torchgfn/", develop = true, extras = ["all"]}
pyright = "^1.1.393"
numpy-quaternion = "^2024.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
fake-bpy-module-latest = "^20250122"

[tool.poetry.group.debug.dependencies]
pudb = "^2024.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
 "torchgfn/"
]

[tool.pyright]
exclude = [
 "torchgfn/"
]
